image mode welcome page

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -16,6 +16,7 @@
 @import outfits/show
 @import pets/bulk
 @import static/donate
+@import static/image_mode
 @import static/terms
 @import users/top_contributors
 
