--- a/app/stylesheets/static/_donate.sass
+++ b/app/stylesheets/static/_donate.sass
@@ -46,7 +46,9 @@ body.static-donate
 
     img
       border: $image-mode-preview-border-width solid $module-border-color
+      height: $image-mode-preview-image-width
       margin-bottom: .5em
+      width: $image-mode-preview-image-width
 
     figcaption
       display: block
