oops, no special instructions field. update instructions for donors to get beta

--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -32,9 +32,11 @@
     = pledgie_amount_field_tag
     %button{:type => 'submit'} Donate now!
   %p
-    Include your
+    Once you're done, send your PayPal email address and
     = link_to 'Dress to Impress username', login_path_with_return_to
-    in PayPal's Special Instructions field.
+    to
+    = succeed '.' do
+      = mail_to 'webmaster@openneo.net'
   %p We'll email you soon!
 
 
