change wording a bit

--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -1,7 +1,7 @@
 - hide_home_link
 
 = campaign_progress do
-  = link_to 'Image mode is almost here, but we need your help!', donate_path
+  = link_to 'We need your help to keep growing and stay online!', donate_path
 
 #outfit-forms
   - cache :action_suffix => 'outfit_forms_intro' do
