--- a/app/views/static/donate.html.haml
+++ b/app/views/static/donate.html.haml
@@ -49,8 +49,9 @@
 
     **To get there, though, we need a server upgrade.** We've done our best to
     cut back on memory usage on the server we have now, but ultimately found
-    that, when we run the processes that convert the Flash files to images, we
-    lose stability, and the site goes down.
+    that, since Dress to Impress has grown so much, we don't have the server
+    power to both run the site and convert Flash files to images. When we try,
+    the site goes down, and that's no good for anybody.
 
     **So, we're moving from about $20 to $30 a month.** We'll be moving from
     [Linode's 512 server to the 768 server](http://linode.com). It's what we
@@ -75,8 +76,8 @@
     **Thank you for your continued support.** Dress to Impress is 100%
     user-funded, and we intend to stay that way. Our goal is to raise enough
     money to be able to keep running on the upgraded server for the next 12
-    months, so that's $280: $360 minus about $80 from previous fundraisers.
-    Looks like a lot, but I know we can do it.
+    months, so that's $280: $360 minus about $80 remaining from previous
+    fundraisers. Not very much. I know we can do it.
 
 #image-mode-comments
   #disqus_thread
