add Donate Now! button to campaign progress on home

--- a/app/stylesheets/partials/_campaign-progress.sass
+++ b/app/stylesheets/partials/_campaign-progress.sass
@@ -10,6 +10,15 @@
     position: relative
     visibility: hidden
 
+    .button
+      +loud-awesome-button-color
+      font-size: 75%
+      margin-left: 1em
+      padding: .25em .75em
+
+      &:after
+        content: none
+
   .campaign-progress
     background: $module-border-color
     +linear-gradient(color-stops($module-border-color + #222, $module-border-color))
