--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -2,6 +2,7 @@
 
 = campaign_progress do
   = link_to 'We need your help to keep growing and stay online!', donate_path
+  = link_to 'Donate now!', donate_path, :class => 'button'
 
 #outfit-forms
   - cache :action_suffix => 'outfit_forms_intro' do
