drop donate bar into items, outfits#show

--- a/app/stylesheets/_items.sass
+++ b/app/stylesheets/_items.sass
@@ -1,6 +1,10 @@
+@import "partials/campaign-progress"
+
 body.items
+  +campaign-progress
+
   text-align: center
-  
+
   input[type=text]
     font-size: 125%
     width: 15em
@@ -17,3 +21,4 @@ body.items
         text-decoration: underline
       &:hover span
         text-decoration: none
+
