--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,7 @@
   %body{:class => body_class}
     = javascript_include_tag "analytics"
     #container
+      = yield :before_title
       - if content_for?(:title) && show_title_header?
         %h1#title= yield :title
       = render 'static/announcement.html'
