--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -1,3 +1,4 @@
+- content_for :before_title, campaign_progress
 - content_for :title_category do
   Infinite Closet: Neopets customization clothing and wearables database
 - content_for :before_flashes do
