--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -1,8 +1,6 @@
 - hide_home_link
 
-= campaign_progress do
-  = link_to 'We need your help to keep growing and stay online!', donate_path
-  = link_to 'Donate now!', donate_path, :class => 'button'
+= campaign_progress
 
 #outfit-forms
   - cache :action_suffix => 'outfit_forms_intro' do
