--- a/app/views/outfits/show.html.haml
+++ b/app/views/outfits/show.html.haml
@@ -1,4 +1,6 @@
 - title(@outfit.name || "Shared outfit")
+- content_for :before_title, campaign_progress
+
 = link_to_edit_outfit(@outfit, :class => 'button', :id => 'outfit-wardrobe-link') do
   Edit
   - unless user_signed_in? && @outfit.user == current_user
