user closet display

--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,5 +1,3 @@
 .object
-  = link_to item_path(item, :q => @query) do
-    = image_tag item.thumbnail_url, :alt => item.description, :title => item.description
-    = item.name
-    = nc_icon_for(item)
+  = render :partial => 'item_link', :locals => {:item => item}
+
