--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -7,6 +7,7 @@
 @import partials/jquery.jgrowl
 
 @import closet_hangers/index
+@import closet_pages/new
 @import contributions/index
 @import items
 @import items/index
