basic hanger interface from item

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -76,7 +76,7 @@ $container_width: 800px
 input, button, select, label
   cursor: pointer
 
-input[type=text], input[type=password], input[type=search], select
+input[type=text], input[type=password], input[type=search], input[type=number], select
   +border-radius(3px)
   background: #fff
   border: 1px solid $input-border-color
