--- a/app/stylesheets/items/_show.sass
+++ b/app/stylesheets/items/_show.sass
@@ -62,3 +62,23 @@ body.items-show
   .nc-icon
     height: 16px
     width: 16px
+
+  #closet-hanger-form
+    border: 1px solid $module-border-color
+    float: right
+    font-size: 85%
+    padding: 1em .5em .5em
+    width: 18em
+
+    label
+      display: block
+      font-weight: bold
+
+    input[type=number]
+      width: 4em
+
+    a
+      display: block
+      margin-top: .5em
+      text-align: right
+
